# offlineasm

./: .gitmodules  Cargo.toml  README.md  file.rb  script  script.rs  test.rs  x86.rs
examples/: simple.rs
offlineasm/: Cargo.toml
offlineasm-ast/: Cargo.toml  README.md
offlineasm-ast/src/: instructions.rs  lib.rs  operands.rs  parser.rs  registers.rs  stmt.rs  target.rs  transforms.rs
offlineasm-def/: Cargo.toml
offlineasm-def/src/: instructions.rs
offlineasm-expand/: Cargo.toml
offlineasm-expand/src/: lib.rs
offlineasm-meta/: Cargo.toml  README.md
offlineasm-proc/: Cargo.toml
offlineasm-proc/src/: asm.rs  ast.rs  doc.rs  instructions.rs  lib.rs  old.rs  opt.rs  parser.rs  registers.rs  risc.rs  riscv64.rs  rloop.rs  transforms.rs  x86.rs
offlineasm/src/: instructions.rs  lib.rs  main.rs  rloop.rs
