[package]
name = "offlineasm-proc"
version = "0.1.0"
edition = "2018"

[dependencies]
parking_lot = "0.12.3"
proc-macro2 = "1.0.93"
quote = "1.0.38"
regex = "1.11.1"
syn = { version = "2.0.96", features = ["full"] }
lazy-regex = "3.4.0"
offlineasm-def = { path = "../offlineasm-def" }
[lib]
proc-macro = true 
